# perso-2024b-ThurarBogacki

./: README.md
my-scotty-server/: CHANGELOG.md  README.md  my-scotty-server.cabal  stack.yaml
my-scotty-server/.stack-work/: stack.sqlite3
my-scotty-server/dist-newstyle/cache/: compiler  config
my-scotty-server/src/: Main.hs  style.css
